PAT/grammar/output/cspsharpParser.java
// $ANTLR 3.5 G:\\workspace\\PAT\\grammar\\cspsharp.g 2013-01-19 11:45:35

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings("all")
public class cspsharpParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "LINE_COMMENT", 
		"STRING", "WS", "'!'", "'!='", "'#'", "'$'", "'%'", "'&&'", "'&'", "'('", 
		"')'", "'*'", "'+'", "'++'", "','", "'-'", "'--'", "'->'", "'.'", "'..'", 
		"'/'", "'/\\\\'", "':'", "';'", "'<'", "'<->'", "'<='", "'<>'", "'<F>'", 
		"'<FD>'", "'='", "'=='", "'>'", "'>='", "'?'", "'@'", "'Skip'", "'Stop'", 
		"'['", "'[*]'", "'[]'", "'\\\\/'", "']'", "'^'", "'alphabet'", "'assert'", 
		"'atomic'", "'call'", "'case'", "'channel'", "'dd'", "'deadlockfree'", 
		"'default'", "'define'", "'deterministic'", "'divergencefree'", "'else'", 
		"'enum'", "'false'", "'hvar'", "'if'", "'ifa'", "'ifb'", "'import'", "'include'", 
		"'interrupt'", "'max'", "'min'", "'new'", "'nonterminating'", "'reaches'", 
		"'refines'", "'tau'", "'true'", "'var'", "'while'", "'with'", "'xor'", 
		"'{'", "'|'", "'|='", "'||'", "'|||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int LINE_COMMENT=7;
	public static final int STRING=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "synpred6_cspsharp", "eventList", "definition", "synpred156_cspsharp", 
		"synpred69_cspsharp", "atom", "relationalExpression", "synpred50_cspsharp", 
		"synpred100_cspsharp", "synpred70_cspsharp", "synpred95_cspsharp", "unaryExpression", 
		"synpred71_cspsharp", "synpred173_cspsharp", "synpred24_cspsharp", "synpred146_cspsharp", 
		"caseExpr", "channel", "specBody", "synpred14_cspsharp", "synpred139_cspsharp", 
		"interruptExpr", "synpred12_cspsharp", "synpred20_cspsharp", "specification", 
		"bitwiseLogicExpression", "synpred126_cspsharp", "statement", "synpred163_cspsharp", 
		"synpred56_cspsharp", "synpred52_cspsharp", "synpred149_cspsharp", "synpred11_cspsharp", 
		"parameter", "sequentialExpr", "synpred19_cspsharp", "indexedExpression", 
		"synpred145_cspsharp", "channelExpr_refactor", "synpred131_cspsharp", 
		"synpred83_cspsharp", "synpred104_cspsharp", "synpred66_cspsharp", "synpred169_cspsharp", 
		"synpred82_cspsharp", "synpred77_cspsharp", "synpred46_cspsharp", "synpred174_cspsharp", 
		"equalityExpression", "externalChoiceExpr", "synpred168_cspsharp", "synpred8_cspsharp", 
		"localVariableDeclaration", "synpred76_cspsharp", "synpred152_cspsharp", 
		"eventName", "generalChoiceExpr", "synpred51_cspsharp", "synpred134_cspsharp", 
		"synpred112_cspsharp", "paralDef", "synpred37_cspsharp", "synpred40_cspsharp", 
		"synpred38_cspsharp", "define", "methods_fields_call", "synpred47_cspsharp", 
		"atomicExpr", "synpred22_cspsharp", "additiveExpression", "caseCondition", 
		"synpred96_cspsharp", "synpred89_cspsharp", "synpred113_cspsharp", "synpred27_cspsharp", 
		"synpred10_cspsharp", "synpred79_cspsharp", "arrayExpression", "synpred23_cspsharp", 
		"unaryExpressionNotPlusMinus", "expression", "synpred158_cspsharp", "channelExpr", 
		"synpred107_cspsharp", "synpred86_cspsharp", "synpred5_cspsharp", "synpred164_cspsharp", 
		"hidingExpr", "synpred167_cspsharp", "synpred121_cspsharp", "alphabet", 
		"ifExpr", "synpred78_cspsharp", "synpred35_cspsharp", "synpred106_cspsharp", 
		"synpred60_cspsharp", "synpred119_cspsharp", "parallelExpr", "synpred21_cspsharp", 
		"whileExpression", "synpred103_cspsharp", "synpred41_cspsharp", "synpred94_cspsharp", 
		"synpred162_cspsharp", "ifBlock", "synpred59_cspsharp", "synpred125_cspsharp", 
		"synpred136_cspsharp", "synpred159_cspsharp", "synpred102_cspsharp", "ifExprs", 
		"conditionalAndExpression", "synpred4_cspsharp", "synpred108_cspsharp", 
		"synpred118_cspsharp", "synpred88_cspsharp", "synpred117_cspsharp", "eventM", 
		"synpred157_cspsharp", "synpred129_cspsharp", "synpred74_cspsharp", "eventExpr", 
		"synpred32_cspsharp", "dparameter", "synpred98_cspsharp", "synpred64_cspsharp", 
		"synpred9_cspsharp", "synpred31_cspsharp", "synpred105_cspsharp", "synpred90_cspsharp", 
		"interleaveExpr", "synpred116_cspsharp", "synpred133_cspsharp", "synpred175_cspsharp", 
		"synpred49_cspsharp", "conditionalOrExpression", "internalChoiceExpr", 
		"synpred92_cspsharp", "dstatement", "synpred172_cspsharp", "synpred166_cspsharp", 
		"synpred75_cspsharp", "synpred1_cspsharp", "synpred170_cspsharp", "synpred55_cspsharp", 
		"synpred13_cspsharp", "synpred36_cspsharp", "synpred115_cspsharp", "synpred81_cspsharp", 
		"synpred2_cspsharp", "synpred61_cspsharp", "synpred43_cspsharp", "synpred3_cspsharp", 
		"synpred123_cspsharp", "synpred151_cspsharp", "synpred58_cspsharp", "synpred138_cspsharp", 
		"synpred18_cspsharp", "synpred124_cspsharp", "synpred179_cspsharp", "synpred132_cspsharp", 
		"synpred122_cspsharp", "synpred165_cspsharp", "synpred130_cspsharp", "synpred72_cspsharp", 
		"synpred137_cspsharp", "synpred34_cspsharp", "synpred141_cspsharp", "synpred97_cspsharp", 
		"letDefintion", "synpred99_cspsharp", "synpred54_cspsharp", "synpred154_cspsharp", 
		"synpred171_cspsharp", "synpred85_cspsharp", "conditionalXorExpression", 
		"synpred28_cspsharp", "synpred111_cspsharp", "assertion", "synpred26_cspsharp", 
		"synpred62_cspsharp", "recordExpression", "synpred29_cspsharp", "synpred42_cspsharp", 
		"synpred101_cspsharp", "synpred127_cspsharp", "synpred180_cspsharp", "ifExpression", 
		"synpred150_cspsharp", "synpred135_cspsharp", "synpred114_cspsharp", "synpred39_cspsharp", 
		"synpred67_cspsharp", "synpred140_cspsharp", "guardExpr", "synpred176_cspsharp", 
		"synpred142_cspsharp", "synpred80_cspsharp", "synpred25_cspsharp", "synpred155_cspsharp", 
		"synpred15_cspsharp", "synpred120_cspsharp", "synpred68_cspsharp", "synpred91_cspsharp", 
		"synpred17_cspsharp", "withClause", "block", "recordElement", "synpred144_cspsharp", 
		"synpred48_cspsharp", "synpred143_cspsharp", "synpred147_cspsharp", "varaibleRange", 
		"synpred44_cspsharp", "synpred30_cspsharp", "synpred148_cspsharp", "synpred161_cspsharp", 
		"synpred33_cspsharp", "synpred110_cspsharp", "synpred16_cspsharp", "synpred87_cspsharp", 
		"library", "synpred53_cspsharp", "synpred93_cspsharp", "synpred45_cspsharp", 
		"argumentExpression", "synpred65_cspsharp", "synpred160_cspsharp", "synpred84_cspsharp", 
		"synpred57_cspsharp", "synpred128_cspsharp", "synpred153_cspsharp", "multiplicativeExpression", 
		"synpred177_cspsharp", "synpred109_cspsharp", "paralDef2", "synpred63_cspsharp", 
		"synpred7_cspsharp", "definitionRef", "synpred178_cspsharp", "synpred73_cspsharp"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, true, false, false, false, true, false, false, false, false, 
		    false, false, true, true, false, true, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, true, false, false, 
		    true, false, false, false, false, true, false, false, true, false, 
		    false, false, false, false, true, false, false, true, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public cspsharpParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public cspsharpParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this, port, null);

		setDebugListener(proxy);
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public cspsharpParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());
	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override public String[] getTokenNames() { return cspsharpParser.tokenNames; }
	@Override public String getGrammarFileName() { return "G:\\workspace\\PAT\\grammar\\cspsharp.g"; }



	// $ANTLR start "specification"
	// G:\\workspace\\PAT\\grammar\\cspsharp.g:7:1: specification : ( specBody ) EOF ;
	public final void specification() throws  {
		try { dbg.enterRule(getGrammarFileName(), "specification");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(7, 0);

		try {
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:9:13: ( ( specBody ) EOF )
			dbg.enterAlt(1);

			// G:\\workspace\\PAT\\grammar\\cspsharp.g:9:15: ( specBody ) EOF
			{
			dbg.location(9,15);
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:9:15: ( specBody )
			dbg.enterAlt(1);

			// G:\\workspace\\PAT\\grammar\\cspsharp.g:9:16: specBody
			{
			dbg.location(9,16);
			pushFollow(FOLLOW_specBody_in_specification42);
			specBody();
			state._fsp--;
			if (state.failed) return;
			}
			dbg.location(9,26);
			match(input,EOF,FOLLOW_EOF_in_specification45); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(11, 12);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "specification");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "specification"



	// $ANTLR start "specBody"
	// G:\\workspace\\PAT\\grammar\\cspsharp.g:15:1: specBody : ( library | letDefintion | definition | assertion | alphabet | define | channel );
	public final void specBody() throws  {
		try { dbg.enterRule(getGrammarFileName(), "specBody");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(15, 0);

		try {
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:16:18: ( library | letDefintion | definition | assertion | alphabet | define | channel )
			int alt1=7;
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			switch ( input.LA(1) ) {
			case 12:
				{
				switch ( input.LA(2) ) {
				case 71:
				case 72:
					{
					alt1=1;
					}
					break;
				case 53:
					{
					alt1=4;
					}
					break;
				case 52:
					{
					alt1=5;
					}
					break;
				case 61:
					{
					alt1=6;
					}
					break;
				default:
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case 67:
			case 82:
				{
				alt1=2;
				}
				break;
			case ID:
				{
				alt1=3;
				}
				break;
			case EOF:
			case 65:
				{
				alt1=6;
				}
				break;
			case 57:
				{
				alt1=7;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:16:20: library
					{
					dbg.location(16,20);
					pushFollow(FOLLOW_library_in_specBody87);
					library();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:17:20: letDefintion
					{
					dbg.location(17,20);
					pushFollow(FOLLOW_letDefintion_in_specBody108);
					letDefintion();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					dbg.enterAlt(3);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:18:20: definition
					{
					dbg.location(18,20);
					pushFollow(FOLLOW_definition_in_specBody131);
					definition();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					dbg.enterAlt(4);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:19:20: assertion
					{
					dbg.location(19,20);
					pushFollow(FOLLOW_assertion_in_specBody152);
					assertion();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					dbg.enterAlt(5);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:20:20: alphabet
					{
					dbg.location(20,20);
					pushFollow(FOLLOW_alphabet_in_specBody173);
					alphabet();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					dbg.enterAlt(6);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:21:20: define
					{
					dbg.location(21,20);
					pushFollow(FOLLOW_define_in_specBody194);
					define();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					dbg.enterAlt(7);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:22:20: channel
					{
					dbg.location(22,20);
					pushFollow(FOLLOW_channel_in_specBody215);
					channel();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(23, 17);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "specBody");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "specBody"



	// $ANTLR start "library"
	// G:\\workspace\\PAT\\grammar\\cspsharp.g:27:1: library : ( '#' 'import' STRING ';' | '#' 'include' STRING ';' );
	public final void library() throws  {
		try { dbg.enterRule(getGrammarFileName(), "library");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(27, 0);

		try {
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:28:19: ( '#' 'import' STRING ';' | '#' 'include' STRING ';' )
			int alt2=2;
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==12) ) {
				int LA2_1 = input.LA(2);
				if ( (LA2_1==71) ) {
					alt2=1;
				}
				else if ( (LA2_1==72) ) {
					alt2=2;
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:28:21: '#' 'import' STRING ';'
					{
					dbg.location(28,21);
					match(input,12,FOLLOW_12_in_library262); if (state.failed) return;dbg.location(28,25);
					match(input,71,FOLLOW_71_in_library264); if (state.failed) return;dbg.location(28,34);
					match(input,STRING,FOLLOW_STRING_in_library266); if (state.failed) return;dbg.location(28,41);
					match(input,31,FOLLOW_31_in_library268); if (state.failed) return;
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// G:\\workspace\\PAT\\grammar\\cspsharp.g:30:15: '#' 'include' STRING ';'
					{
					dbg.location(30,15);
					match(input,12,FOLLOW_12_in_library286); if (state.failed) return;dbg.location(30,19);
					match(input,72,FOLLOW_72_in_library288); if (state.failed) return;dbg.location(30,29);
					match(input,STRING,FOLLOW_STRING_in_library290); if (state.failed) return;dbg.location(30,36);
					match(input,31,FOLLOW_31_in_library292); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(32, 12);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "library");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

	}
	// $ANTLR end "library"



	// $ANTLR start "channel"
	// G:\\workspace\\PAT\\grammar\\cspsharp.g:36:1: channel : 'channel' ID ( '[' additiveExpression ']' )? additiveExpression ';' ;
	public final void channel() throws  {
		try { dbg.enterRule(getGrammarFileName(), "channel");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(36, 0);

		try {
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:38:14: ( 'channel' ID ( '[' additiveExpression ']' )? additiveExpression ';' )
			dbg.enterAlt(1);

			// G:\\workspace\\PAT\\grammar\\cspsharp.g:38:16: 'channel' ID ( '[' additiveExpression ']' )? additiveExpression ';'
			{
			dbg.location(38,16);
			match(input,57,FOLLOW_57_in_channel333); if (state.failed) return;dbg.location(38,26);
			match(input,ID,FOLLOW_ID_in_channel335); if (state.failed) return;dbg.location(38,29);
			// G:\\workspace\\PAT\\grammar\\cspsharp.g:38:29: ( '[' additiveExpression ']' )?
			int alt3=2;
			try { dbg.enterSubRule(3);
			try { dbg.enterDecision(3, decisionCanBacktrack[3]);

			int LA3_0 = input.LA(1);
			if ( (LA3_0==46) ) {
				alt3=1;
			}
			} finally {dbg.exitDecision(3);}
